--- a/client/src/styles/score.scss
+++ b/client/src/styles/score.scss
@@ -15,4 +15,26 @@
   background-color: rgb(255, 105, 180);
   height: 100%;
   border-radius: 10px;
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  ul {
+    display: grid;
+  }
+
+  > * {
+    padding: 0.5rem;
+  }
+
+  table {
+    border-collapse: separate;
+    border-spacing: 5px;
+  }
+
+  thead {
+    font-size: 1.5rem;
+    border-bottom: 1px solid white;
+  }
 }
