--- a/client/src/styles/menu.scss
+++ b/client/src/styles/menu.scss
@@ -2,14 +2,18 @@
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
+  overflow: scroll;
 
   img {
     height: 100%;
+    cursor: pointer;
+    max-width: 500px;
   }
 
   li {
+    padding: 1rem;
     margin: 1vh;
     max-height: 300px;
-    aspect-ratio: 3 / 2;
+    width: 70%;
   }
 }
