--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,5 @@
 @import "./styles/reset.scss";
-@import "./styles/app.scss";
+@import "./styles/App.scss";
 @import "./styles/game.scss";
 @import "./styles/characters.scss";
 @import "./styles/menu.scss";
